--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,19 @@
 # Site settings
-title: Klise Theme # site title
+title: Margin Notes # site title
 description: >- # site description
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
+  A blog of things.
 lang: en-US # default lang
-timezone: Asia/Jakarta # set your timezone
+timezone: Eastern # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
 repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
 author:
-  name: Jekyll Klisé # author name
+  name: Sam # author name
   bio: >- # tell to the world
-    The minimalist Jekyll theme, light and dark mode support, for running a personal site and blog, 
-    meet Klisé theme at <a href="https://github.com/piharpi/jekyll-klise" target="_blank" rel="noopener">@github</a>.
-  username: username # general username
+    a bio goes here
+  username: Haiku # general username
   github: github_username # github username
   twitter: twitter_username # twitter username
   facebook: facebook_username # facebook username
@@ -23,8 +21,8 @@ author:
   avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
-url: "https://klise.now.sh" #
-baseurl:
+url: "https://sambilheimer.github.io" #
+baseurl: /margin-notes/
 permalink: /:title/
 google_analytics: # leave it blank if not wish
 fb_appid:
